Fix alignment and tweak words

--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 
 body { background-color: white; font-family: 'Roboto', sans-serif; text-align: center; }
-img.logo { width: 300pt; height: 300pt }
-img.store { width: 300pt; display: inline-block }
+img.logo { width: 300pt; max-width: 90%; }
+img.store { width: 300pt; max-width: 90%; display: inline-block }
 p { text-align: justify; font-size: 14pt}
 
 div.content { max-width: 600pt; margin: 0 auto 0 auto }
